--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,41 @@
 annotated-types==0.7.0
 anyio==4.10.0
+appnope==0.1.4
+asttokens==3.0.0
 boto3==1.36.7
 botocore==1.36.7
 brotlipy==0.7.0
-certifi
-cffi
-charset-normalizer
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
 -e git+https://github.com/facebookresearch/codellama@427d6ac90f0b7db206bc4c62f4c5d38f92ca4d10#egg=codellama
-cryptography
+comm==0.2.3
+cryptography==45.0.6
+debugpy==1.8.16
+decorator==5.2.1
+distro==1.9.0
+dotenv==0.9.9
 exceptiongroup==1.3.0
+executing==2.2.0
 fairscale==0.4.13
 filelock==3.12.2
 fire==0.5.0
+fsspec==2025.7.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-idna
+idna==3.10
+ipykernel==6.30.1
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.2
+jiter==0.10.0
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 langchain-core==0.3.74
 langgraph==0.6.6
 langgraph-checkpoint==2.1.1
@@ -28,47 +44,64 @@ langgraph-sdk==0.2.3
 langsmith==0.4.16
 llvmlite==0.44.0
 MarkupSafe==2.1.3
+matplotlib-inline==0.1.7
 more-itertools==10.7.0
 mpmath==1.3.0
+nest-asyncio==1.6.0
 networkx==3.1
 numba==0.61.2
 numpy==1.25.2
 oath==1.4.4
-openai-whisper
+openai==1.101.0
+openai-whisper==20250625
 orjson==3.11.2
 ormsgpack==1.10.0
 packaging==25.0
-pluggy
-pycosat
-pycparser
+parso==0.8.5
+pexpect==4.9.0
+platformdirs==4.3.8
+pluggy==1.6.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycosat==0.6.6
+pycparser==2.22
 pycryptodome==3.20.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
-pyOpenSSL
-PySocks
+pyOpenSSL==25.1.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 python-vipaccess==0.14.2
 PyYAML==6.0.2
+pyzmq==27.0.2
 regex==2024.11.6
-requests
+requests==2.32.5
 requests-toolbelt==1.0.0
-ruamel.yaml
-ruamel.yaml.clib
+ruamel.yaml==0.18.15
+ruamel.yaml.clib==0.2.12
 s3transfer==0.11.2
 sentencepiece==0.1.99
-six
+six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
 sympy==1.12
 tenacity==9.1.2
 termcolor==2.3.0
 tiktoken==0.9.0
-toolz
-torch
-tqdm
+toolz==1.0.0
+torch==2.4.1
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
-urllib3
+urllib3==2.5.0
+wcwidth==0.2.13
 wget==3.2
 xxhash==3.5.0
 zstandard==0.24.0
