--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,23 @@ annotated-types==0.7.0
 anyio==4.10.0
 appnope==0.1.4
 asttokens==3.0.0
+beautifulsoup4==4.13.5
 boto3==1.36.7
 botocore==1.36.7
 brotlipy==0.7.0
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.3
+click==8.2.1
 -e git+https://github.com/facebookresearch/codellama@427d6ac90f0b7db206bc4c62f4c5d38f92ca4d10#egg=codellama
 comm==0.2.3
 cryptography==45.0.6
+ddgs==9.5.4
 debugpy==1.8.16
 decorator==5.2.1
 distro==1.9.0
 dotenv==0.9.9
+duckduckgo_search==8.1.1
 exceptiongroup==1.3.0
 executing==2.2.0
 fairscale==0.4.13
@@ -43,6 +47,7 @@ langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.3
 langsmith==0.4.16
 llvmlite==0.44.0
+lxml==6.0.1
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.7
 more-itertools==10.7.0
@@ -61,6 +66,7 @@ parso==0.8.5
 pexpect==4.9.0
 platformdirs==4.3.8
 pluggy==1.6.0
+primp==0.15.0
 prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
@@ -88,6 +94,7 @@ s3transfer==0.11.2
 sentencepiece==0.1.99
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 stack-data==0.6.3
 sympy==1.12
 tenacity==9.1.2
