--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,44 @@
-annotated-types==0.7.0
-anyio==4.10.0
-asttokens==3.0.0
-boto3==1.36.7
-botocore==1.36.7
-brotlipy==0.7.0
-certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5d968ni_yn/croot/certifi_1671487774636/work/certifi
-cffi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ab19r4bji3/croot/cffi_1670423206034/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
--e git+https://github.com/facebookresearch/codellama@427d6ac90f0b7db206bc4c62f4c5d38f92ca4d10#egg=codellama
-comm==0.2.3
-conda==23.1.0
-conda-content-trust @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_11146a2b-93c2-444c-a378-ad4fac363e991s0r1hnp/croots/recipe/conda-content-trust_1658126383571/work
-conda-package-handling @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5f3f459f9v/croot/conda-package-handling_1672865025324/work
-conda_package_streaming @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_58gpsa_6af/croot/conda-package-streaming_1670508144037/work
-cryptography @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8c_qoky_1b/croot/cryptography_1673298759921/work
-decorator==5.2.1
-exceptiongroup==1.3.0
-executing==2.2.0
-fairscale==0.4.13
-filelock==3.12.2
-fire==0.5.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_771olrhiqw/croot/idna_1666125579282/work
-ipython==8.37.0
-ipywidgets==8.1.7
-jedi==0.19.2
-Jinja2==3.1.2
-jmespath==1.0.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jupyterlab_widgets==3.0.15
-langchain-core==0.3.74
-langgraph==0.6.6
-langgraph-checkpoint==2.1.1
-langgraph-prebuilt==0.6.4
-langgraph-sdk==0.2.3
-langsmith==0.4.16
-llvmlite==0.44.0
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.7
-more-itertools==10.7.0
-mpmath==1.3.0
-networkx==3.1
-numba==0.61.2
-numpy==1.25.2
-oath==1.4.4
-openai-whisper @ git+https://github.com/openai/whisper.git@dd985ac4b90cafeef8712f2998d62c59c3e62d22
-orjson==3.11.2
-ormsgpack==1.10.0
-packaging==25.0
-parso==0.8.5
-pexpect==4.9.0
-pluggy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-w6jyveby/pluggy_1648109277227/work
-prompt_toolkit==3.0.51
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycosat @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_e9xhel3kyj/croot/pycosat_1666805516297/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pycryptodome==3.20.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-Pygments==2.19.2
-PyJWT==2.10.1
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-PySocks @ file:///Users/ktietz/ci_310/pysocks_1643961536721/work
-python-dateutil==2.9.0.post0
-python-vipaccess==0.14.2
-PyYAML==6.0.2
-regex==2024.11.6
-requests @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b15e28ca-768e-4951-b4c6-8a7476e43183hrjpnkg9/croots/recipe/requests_1657734638595/work
-requests-toolbelt==1.0.0
-ruamel.yaml @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_aeh5mqcw49/croot/ruamel.yaml_1666304555976/work
-ruamel.yaml.clib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f64xdg2rww/croot/ruamel.yaml.clib_1666302244208/work
-s3transfer==0.11.2
-sentencepiece==0.1.99
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio==1.3.1
-stack-data==0.6.3
-sympy==1.12
-tenacity==9.1.2
-termcolor==2.3.0
-tiktoken==0.9.0
-toolz @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_362wyqvvgy/croot/toolz_1667464079070/work
-torch==2.0.1
-tqdm @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_637jfu39ar/croots/recipe/tqdm_1664392693982/work
-traitlets==5.14.3
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8fvc4z_gis/croot/urllib3_1673575619550/work
-wcwidth==0.2.13
-wget==3.2
-widgetsnbextension==4.0.14
-xxhash==3.5.0
-zstandard==0.24.0
+# Shusrusha Medical Document Processor Dependencies
+# Core Framework
+streamlit>=1.28.0
+langgraph>=0.6.6
+langchain-core>=0.3.74
+langgraph-checkpoint>=2.1.1
+langgraph-prebuilt>=0.6.4
+
+# OpenAI Integration
+openai>=1.101.0
+tiktoken>=0.9.0
+
+# HTTP and API
+requests>=2.32.5
+httpx>=0.28.1
+httpcore>=1.0.9
+
+# Data Processing
+beautifulsoup4>=4.13.5
+pandas>=2.0.0
+numpy>=1.25.0
+pydantic>=2.11.0
+
+# Image Processing
+Pillow>=10.0.0
+
+# Environment Management
+python-dotenv>=1.1.1
+
+# Utilities
+PyYAML>=6.0.2
+packaging>=25.0
+typing-extensions>=4.14.0
+
+# JSON Processing
+orjson>=3.11.0
+
+# Security
+cryptography>=41.0.0
+certifi>=2023.7.22
+
+# Development and Testing (optional)
+ipywidgets>=8.1.0
+jupyter>=1.0.0
